Total delegates pledged done

--- a/hw05/styles.css
+++ b/hw05/styles.css
@@ -1,6 +1,6 @@
 .chart div {
     font: 10px sans-serif;
-    background-color: steelblue;
+    background-color: #ff3333;
     color: white;
     text-align: right;
     padding: 2px;
