--- a/testhtml/style.css
+++ b/testhtml/style.css
@@ -30,4 +30,12 @@ h2{
     padding-right: 30px;
 }
 
+#logo{
+    height: 20%;
+    width: 10%;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+}
+
 
